--- a/.github/workflows/simulate-merge-pr.yml
+++ b/.github/workflows/simulate-merge-pr.yml
@@ -8,12 +8,13 @@ concurrency:
 
 env:
   PR_NUMBER: ${{ github.event.pull_request.number }}
-  BRANCH_TO_CREATE_SIMULATING_MERGE: "temp-simulate_merge_pr_${{ env.PR_NUMBER }}"
 
 jobs:
   merge-commits-push-branch:
     runs-on: ubuntu-latest
     name: Merge commits push branch 
+    env: 
+      BRANCH_TO_CREATE_SIMULATING_MERGE: "temp-simulate_merge_pr_${{ env.PR_NUMBER }}"
     permissions: # permissions must match that of a real deployment because auth is tested in dry-run
       contents: write # for pushing commits and tags 
     steps:
