--- a/.github/workflows/simulate-merge-pr.yml
+++ b/.github/workflows/simulate-merge-pr.yml
@@ -11,11 +11,11 @@ env:
   PR_NUMBER: ${{ github.event.pull_request.number }}
 
 jobs:
-  merge-commits-push-branch:
+  simulate-merge-pr:
     runs-on: ubuntu-latest
-    name: Merge commits push branch       
-    permissions: write-all # permissions must match that of a real deployment because auth is tested in dry-run
-      #contents: write # for pushing commits and tags 
+    name: Simulate merging PR
+    permissions: # permissions must match that of a real deployment because auth is tested in dry-run
+      contents: write # for pushing commits and tags 
     steps:
     - uses: actions/checkout@v3
 
@@ -51,13 +51,20 @@ jobs:
         contains: ${{ env.BRANCH_TO_CREATE_SIMULATING_MERGE }}
     - name: Push new branch, force push if the branch already exists 
       run: git push --force origin "${{ env.BRANCH_TO_CREATE_SIMULATING_MERGE }}"        
-    
-    # Now that we created a new branch that represents what the git commit history will look like after merging the PR, 
-    # run the deployment test from that new branch. 
-    - name: Run test-deployment workflow to run deployment test from new branch ${{ env.BRANCH_TO_CREATE_SIMULATING_MERGE }}
+
+  # Now that we created a new branch that represents what the git commit history will look like after merging the PR, 
+  # run the deployment test from that new branch. 
+  start-test-deployment-workflow:
+    runs-on: ubuntu-latest
+    needs: simulate-merge-pr
+    name: Start test deployment 
+    permissions:
+      actions: write # be able to start a new github action workflow 
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Start workflow that runs test deployment on new branch ${{ env.BRANCH_TO_CREATE_SIMULATING_MERGE }}
       uses: benc-uk/workflow-dispatch@v1
-      env:
-        ACTIONS_STEP_DEBUG: true 
       with:
         workflow: test-deployment.yml
         # ref must be included or github will run workflow from the default branch of the repository. If you make changes to the workflow file, you will not be able to test those changes unless we include ref. 
