try to get url for job

--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -13,9 +13,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  LINK_TO_THIS_WORKFLOW_LOGS: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }}
-
 jobs:
   semantic-release-dry-run:    
     runs-on: ubuntu-latest
@@ -26,6 +23,13 @@ jobs:
       pull-requests: write # comment and interact with PRs. 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Get GitHub URL linking to this CI run so we can reference later 
+      uses: Tiryoh/gha-jobid-action@v0.1.2
+      id: current-job
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        job_name: semantic-release-dry-run
 
     - name: Get branch names to use later
       id: branch-name
@@ -73,7 +77,7 @@ jobs:
 
           Is this not what you expected? Try these suggestions:
           1. 1. [Modify the title of this pull request](https://www.conventionalcommits.org). Only pull requests prefixed with `feat:` and `fix:` trigger a deployment
-          2. View the [CI server logs](${{ env.LINK_TO_THIS_WORKFLOW_LOGS }}) to view the logs of the deployment simulation. Use these logs to better understand why a deployment would not trigger. 
+          2. View the [CI server logs](${{ steps.current-job.outputs.html_url }}) to view the logs of the deployment simulation. Use these logs to better understand why a deployment would not trigger. 
 
     - name: ✏️ Update PR ${{ inputs.pr_number }} comment with message that a deployment will not happen if PR is merged
       uses: marocchino/sticky-pull-request-comment@v2
@@ -87,7 +91,7 @@ jobs:
 
           Is this not what you expected? Try these suggestions:
           1. 1. [Modify the title of this pull request](https://www.conventionalcommits.org). Only pull requests prefixed with `feat:` and `fix:` trigger a deployment
-          2. View the [CI server logs](${{ env.LINK_TO_THIS_WORKFLOW_LOGS }}) to view the logs of the deployment simulation. Use these logs to better understand why a deployment would not trigger. 
+          2. View the [CI server logs](${{ steps.current-job.outputs.html_url }}) to view the logs of the deployment simulation. Use these logs to better understand why a deployment would not trigger. 
     
     - name: ✏️ Update PR ${{ inputs.pr_number }} comment with message that the simulated deployment failed to execute
       uses: marocchino/sticky-pull-request-comment@v2
@@ -99,7 +103,7 @@ jobs:
           
           This could mean that there is an issue with the deployment configuration. 
 
-          It's suggested that you [view the CI server logs](${{ env.LINK_TO_THIS_WORKFLOW_LOGS }}) to see what went wrong and fix the issue before merging the PR. Push more commits to this branch to run the simulated deployment again. 
+          It's suggested that you [view the CI server logs](${{ steps.current-job.outputs.html_url }}) to see what went wrong and fix the issue before merging the PR. Push more commits to this branch to run the simulated deployment again. 
   
   delete-branch:
     needs: semantic-release-dry-run
